Fixed volume bar issues, starts at a normal value. Fixed the value jumping and added a volume tracker with text.

--- a/styling/accessibility.css
+++ b/styling/accessibility.css
@@ -189,3 +189,11 @@ input[type="range"]::-webkit-slider-thumb {
 .volume i:nth-child(3) {
     margin-left: 20px;
 }
+
+.volume-feedback {
+    font-family: "Open Sans", sans-serif;
+    font-size: 26px;
+    color: white;
+    text-align: center;
+    margin-bottom: 20px;
+}
